# ALLCoP

./: .gitignore  README.md  pyproject.toml  requirements.txt
allcatchr/: 1_preprocess.py  4_analyze_unknowns.py
allcatchr/lib/: allcatchr_to_allium_subtypes.yml  constants.py
allcatchr_experiments/: 1_preprocess.py  2_validate.py
allcatchr_experiments/lib/: allcatchr_data_preprocessor.py  constants.py
allium/: 1_preprocess.py
allium/lib/: allium_data_preprocessor.py  constants.py  jude_phenotype_parser.py
allium_experiments/: 1_preprocess.py  2_analyze.py  2_validate.py  3_predict.py  3_prediction_known_subtype.py  3_validate.py  3_validation_singleclass.py  4_preprocess_unknowns.py  4_unknowns.py  5_analyze_unknowns.py  5_multisubtype.py
allium_experiments/data/: formatted_predictions.csv  formatted_predictions_all.csv  formatted_predictions_b_other.csv  formatted_predictions_known_and_b_other.csv  formatted_predictions_known_subtype.csv  formatted_predictions_multiclass.csv  formatted_predictions_singleclass.csv
allium_experiments/lib/: allium_data_preprocessor.py  constants.py  datasets.yml  dual_subtype_heatmap.py  jude_to_allium_subtypes.yml  prediction_comparison.py
allsorts/: 2_analyze.py  3_preprocess_unknowns.py  4_analyze_unknowns.py
allsorts/lib/: allsorts_data_preprocessor.py
allsorts_experiments/: 1_preprocess.py  2_validate.py
allsorts_experiments/lib/: allsorts_data_preprocessor.py  constants.py
data/formatted_predictions/: allcatchr_predictions_KRALI_FINLAND_TOTXVI.csv  (+3 more)
lib/: allium_to_icc_subtypes.yml  colors.py  constants.yml  datasets.yml
(+50 files in other folders)
